# d3-text-sphere

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
docs/: architecture.md  d3-text-sphere-a0f95ccf6e78bd7d.js  d3-text-sphere-a0f95ccf6e78bd7d_bg.wasm  d3-text-sphere-d9c91998a03dc286.js  d3-text-sphere-d9c91998a03dc286_bg.wasm  design.md  index.html  plan.md  status.md
docs/snippets/d3-text-sphere-e1a1e353063b6e0e/: inline0.js
documentation/: ai_agent_instructions.md  grid-approach.md  prd.md  status.md
src/: lib.rs
