[package]
name = "d3-text-sphere"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo = "0.11"
wasm-logger = "0.2"
log = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "NodeList",
    "DomRect",
    "CssStyleDeclaration",
    "console",
]

[profile.release]
opt-level = "s"
lto = true
